--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,8 @@
 
 .login {
 float: right;
-width: 200px;
-height: 45px;
+width: 120px;
+height: 30px;
 display: inline;
 }
 
@@ -56,7 +56,16 @@ display: inline;
 
 .mainBody
 {
-  background-color: #191589;
+
+}
+
+.header{
+  min-height: 80px;
+  height: auto;
+  background-color: pink;
+  padding-top: 25px;
+  padding-left: 10px;
+  background-color: #253529;
 }
 
 body
@@ -91,25 +100,6 @@ body
   margin-left: 10%;
   height: 50px;
 
-}
-
-.inputSearch
-{
-  width: 85%;
-  height: 90%;
-  font-size: 16px;
-  padding-left: 10px;
-  background-color: #2E5894;
-}
-
-.buttonSearch
-{
-  width: 6.5%;
-  height: 100%;
-  margin-left: 1%;
-  border: none;
-  border-radius: 5px;
-  background-color: #DA2647;
 }
 
 .results
@@ -190,12 +180,4 @@ body
   background-color: #4F86F7;
   width: 49%;
   height: 30px;
-}
-
-.jumbotron
-{
-  height: 80px;
-  background-color: #2D383A;
-  padding: 20px;
-
 }
